Changes in version 1.2.4
------------------------

* CellularAutomatonRNG now implements setSeed.

AESCounterRNG improvements:

* Now accepts 320-bit and 384-bit seeds when AES-192 and AES-256
  respectively are available, and 256-bit seeds even when they're not.

* Improved performance by merging some calls and arrays.

* Fixed serialisation.

* setSeed is now implemented. The input will be appended to the existing seed;
  if the seed is already at maximum length, it will be combined with the input
  using a SHA256 digest. Doesn't work during construction or deserialization.

Diehard testing support:

* Now requires that dieharder be installed as /usr/bin/dieharder, but can now
  run on any Unix-like system except MinGW.

* Output generation for testing should now be faster on 64-bit JVMs.

Changes in version 1.2.3
------------------------

* Fixed bug in convertBytesToLong method in the BinaryUtils class.

* Added OSGi bundle metadata (contributed by Dave LeBlanc).

* Updated documentation to explain why setSeed does nothing for any of the
  RNGs.


Changes in version 1.2.2
------------------------

* Fixed serialisation of MersenneTwisterRNG and CellularAutomatonRNG.

* Made XORShiftRNG and CMWC4096RNG thread-safe.

* Added source JAR to distribution.


Changes in version 1.2.1
------------------------

* Converted internal state of XORShiftRNG from an array to five separate
  fields.  This results in improved performance.  Optimisation suggested by Jos
  Hirth.

* Optimised the Probability class so that it doesn't make an RNG call when the
  probability is 1.

* Added swapSubstring method to enable efficient exchange of data between two
  BitStrings.


Changes in verison 1.2
----------------------

* Added two new fast PRNGs (CMWC and XOR).  CMWC provides a very long period
  and the XOR RNG is twice as fast as the Mersenne Twister.  See
  http://school.anhb.uwa.edu.au/personalpages/kwessen/shared/Marsaglia03.html
  for descriptions.
