@@ -1,5 +1,5 @@
 <!-- =========================================================================
-  Copyright 2006-2014 Daniel W. Dyer
+  Copyright 2006-2012 Daniel W. Dyer
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -43,7 +43,7 @@
     </fileset>
   </path>
 
-  <property name="version" value="1.2.4"/>
+  <property name="version" value="1.2.3"/>
   <property name="artifact.identifier" value="uncommons-maths-${version}"/>
 
   <!-- This is the minimum coverage percentage (for both lines and
