@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 Changes in version 1.2.4
 ------------------------
 
@@ -23,6 +24,8 @@ Diehard testing support:
 
 * Output generation for testing should now be faster on 64-bit JVMs.
 
+=======
+>>>>>>> parent of b7ba13a... Modification to AES key implementation so that AESCounterRNG works on Android.
 Changes in version 1.2.3
 ------------------------
 
